[B]1.1.7[/B]
- Updated dizigold urls
- Fixed streamlord
- Updated and fixed seriesonline

[B]1.1.6[/B]
- Added alluc provider (thanks to weekendsource)

[B]1.1.5[/B]
- Dayt update
- Onseries bug fix
- Allow users to hide  movies currently in theaters (released within the last 90 days), 
except in the following sections: Trakt/IMDB Lists, In Theatres, Search

[B]1.1.4[/B]
- Kingmovies fix
- Onmovies update

[B]1.1.3[/B]
- Pubfilm fix
- Kingmovies fix
- Juicy Codes decoder

[B]1.1.2[/B]
- Trakt workaround in tools for Leia
- Update translations
- Code cosmetics

[B]1.1.1[/B]
- Trakt fixes
- Updates existing providers
- Added new provider

[B]1.1.0[/B]
- Official Release
- Fix trakt support
- Updated existing providers
- Added new providers
- Artwork (thanks to jokstergfx)