@@ -168,15 +168,15 @@
         <setting type="lsep" label="FANART.TV" />
         <setting type="lsep" label="Personal API keys provide quicker API responses." />
         <setting type="lsep" label="Become a VIP member for many benefits at: https://fanart.tv/vip" />
-        <setting id="fanart.tv.user" type="text" option="hidden" label="32309" default="" />
+        <setting id="fanart.tv.user" type="text" label="32309" default="" />
         <setting type="sep" />
         <setting type="lsep" label="TMDb" />
-        <setting id="tm.user" type="text" option="hidden" label="32309" default="" />
+        <setting id="tm.user" type="text" label="32309" default="" />
         <setting type="sep" />
         <setting type="lsep" label="Trakt" />
         <setting id="trakt.user" type="action" label="32306" option="close" action="RunPlugin(plugin://plugin.video.covenant/?action=authTrakt)" />
-        <setting id="trakt.token" type="text" option="hidden" visible="false" label="" default="" />
-        <setting id="trakt.refresh" type="text" option="hidden" visible="false" label="" default="" />
+        <setting id="trakt.token" type="text" visible="false" label="" default="" />
+        <setting id="trakt.refresh" type="text" visible="false" label="" default="" />
         <setting type="sep" />
         <setting type="lsep" label="IMDb" />
         <setting id="imdb.user" type="text" label="32303" default="" />
